[tool.poetry]
name = "sample-chatbot"
version = "0.1.0"
description = "Sample Chatbot using llama_index and opt model"
authors = ["Ahmad Bilal <ahmad.bilal@empglabs.com>"]
readme = "README.md"
packages = [{include = "sample_chatbot"}]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.6.21.post1"
langchain = "^0.0.192"
transformers = "^4.29.2"
torch = "^2.0.1"
dynaconf = "^3.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
